fix: Make resource circle contrast higher

--- a/app/ui/src/Pages/Project/pages/KG/components/KGVisualization/Viz/Resources/Resources.module.scss
+++ b/app/ui/src/Pages/Project/pages/KG/components/KGVisualization/Viz/Resources/Resources.module.scss
@@ -1,7 +1,7 @@
 @import 'Styles/colors';
 
 :export {
-  default: palette(feedback, 900);
+  default: palette(feedback, 800);
   defaultHighlight: palette(highlight);
   starred: palette(starred, 700);
   starredHighlight: palette(starred);
